# Space-Impact-game-with-CMake

./: CMakeLists.txt  Readme.md  Readme.txt  main.cpp
game/: CMakeLists.txt
game/inc/: animations.h  asteroid.h  basicElement.h  bullet.h  difficultyLevel.h  enemies.h  factoryEnemies.h  game.h  gameObject.h  screen.h  spaceShip.h  tools.h
game/src/: asteroid.cpp  basicElement.cpp  bullet.cpp  enemies.cpp  game.cpp  gameObject.cpp  screen.cpp  spaceShip.cpp  tools.cpp
